--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "numeral": "^2.0.6",
     "query-string": "^7.1.1",
     "react-number-format": "^4.9.3",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "storybook-addon-pseudo-states": "^1.15.1"
   }
 }
