--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "classnames": "^2.3.1",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "numeral": "^2.0.6",
+    "postcss": "^8.4.14",
     "query-string": "^7.1.1",
     "react-number-format": "^4.9.3",
     "sass": "^1.53.0",
-    "storybook-addon-pseudo-states": "^1.15.1"
+    "storybook-addon-pseudo-states": "^1.15.1",
+    "tailwindcss": "^3.1.6"
   }
 }
