--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "numeral": "^2.0.6",
-    "postcss": "^8.4.14",
+    "postcss": "^8",
     "query-string": "^7.1.1",
     "react-number-format": "^4.9.3",
     "sass": "^1.53.0",
     "storybook-addon-pseudo-states": "^1.15.1",
+    "storybook-addon-sass-postcss": "^0.1.3",
     "tailwindcss": "^3.1.6"
   }
 }
