--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@adobe/aem-headless-client-js": "^3.1.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
