--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest --watch"
   },
   "dependencies": {
     "next": "12.2.2",
@@ -26,11 +27,18 @@
     "@storybook/manager-webpack5": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
     "autoprefixer": "^10.4.7",
+    "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "classnames": "^2.3.1",
+    "dinero.js": "^2.0.0-alpha.8",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "numeral": "^2.0.6",
     "postcss": "^8",
     "query-string": "^7.1.1",
