--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "query-string": "^7.1.1",
     "react-number-format": "^4.9.3",
     "sass": "^1.53.0",
+    "slug": "^5.3.0",
     "storybook-addon-pseudo-states": "^1.15.1",
     "storybook-addon-sass-postcss": "^0.1.3",
     "tailwindcss": "^3.1.6"
