--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "slug": "^5.3.0",
     "storybook-addon-pseudo-states": "^1.15.1",
     "storybook-addon-sass-postcss": "^0.1.3",
-    "tailwindcss": "^3.1.6"
+    "tailwindcss": "^3.1.6",
+    "tailwindcss-animate": "^1.0.5"
   }
 }
