--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "classnames": "^2.3.1",
+    "date-fns": "^2.29.1",
     "dinero.js": "^2.0.0-alpha.8",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
