--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
+    "memory-cache": "^0.2.0",
     "numeral": "^2.0.6",
     "postcss": "^8",
     "query-string": "^7.1.1",
